--- a/hasil.html
+++ b/hasil.html
@@ -29,8 +29,10 @@
                     <td class="scorQuiz"></td>
                 </tr>
             </table>
-            <button type="button" class="btn">Home</button>
+            <button type="button" class="exit btn">Home</button>
         </div>
     </div>
+    <script src="js/info.js"></script>
+    <script src="js/validasi.js"></script>
 </body>
 </html>
