--- a/quiz.html
+++ b/quiz.html
@@ -40,7 +40,7 @@
             </div>
         </footer>
     </div>
-    <script src="js/info.js"></script>
+    <!-- <script src="js/info.js"></script> -->
     <!-- <script src="js/validasi.js"></script> -->
     <script src="js/quiz.js"></script>
     <script src="js/script.js"></script>
