--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
           </form>
       </div>   
       <!-- <script src="js/info.js"></script>   -->
-      <script src="js/validasi.js"></script>  
+<!--       <script src="js/validasi.js"></script>   -->
 </body> 
 </html>
